Anonymous | Login | 2021-01-17 00:39 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] | [ Issue History ] [ Print ] | ||||||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||||||
0030120 | Open CASCADE | [OCCT] OCCT:DRAW | public | 2018-09-10 12:39 | 2020-09-11 15:43 | ||||||||
Reporter | kgv | ||||||||||||
Assigned To | gka | ||||||||||||
Priority | normal | Severity | minor | ||||||||||
Status | new | Resolution | open | ||||||||||
Platform | OS | OS Version | |||||||||||
Product Version | [OCCT] 7.3.0 | ||||||||||||
Target Version | [OCCT] 7.6.0* | Fixed in Version | |||||||||||
Summary | 0030120: Draw Harness - fixshape command does not heal missing 3D curves | ||||||||||||
Description | checkshape reports issue on attached shape:Draw[13]> checkshape h h -- The Shape h has problems : Check Count ------------------------------------------------ No 3D Curve .............................. 9 ------------------------------------------------ however fixshape does not heal these problems, although it provides an algorithm which can do that (ShapeFix_Edge::FixAddCurve3d()). | ||||||||||||
Steps To Reproduce | pload ALL restore box_hlr.brep b checkshape b b # OK, input shape has problems fixshape h b checkshape h h # KO, output shape still has the same problems | ||||||||||||
Tags | No tags attached. | ||||||||||||
Test case number | |||||||||||||
Attached Files | ![]() | ||||||||||||
![]() |
|
(0079095) git (administrator) 2018-09-10 16:16 |
Branch CR30120_tmp has been created by kgv. SHA-1: cdc3736aa68e9945b6bed03471730ae6d9971778 Detailed log of new commits: Author: kgv Date: Mon Sep 10 16:13:42 2018 +0300 0030120: Draw Harness - fixshape command does not heal missing 3D curves |
![]() |
|||
Date Modified | Username | Field | Change |
2018-09-10 12:39 | kgv | New Issue | |
2018-09-10 12:39 | kgv | Assigned To | => gka |
2018-09-10 12:39 | kgv | File Added: box_hlr.brep | |
2018-09-10 12:47 | kgv | Relationship added | related to 0030121 |
2018-09-10 16:16 | git | Note Added: 0079095 | |
2019-07-19 17:27 | apn | Target Version | 7.4.0 => 7.5.0 |
2020-09-11 15:43 | utverdov | Target Version | 7.5.0 => 7.6.0* |
Copyright © 2000 - 2021 MantisBT Team |