0030120: Draw Harness - fixshape command does not heal missing 3D curves